--- a/src/components/pages/Home/home.scss
+++ b/src/components/pages/Home/home.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    object-position: top;
+    object-position: top center;
   }
 }
 
